--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/alensaito1/spotifydl-core#readme",
   "devDependencies": {
+    "@types/fluent-ffmpeg": "^2.1.17",
     "@types/fs-extra": "^9.0.11",
     "@types/node": "^15.3.0",
     "@typescript-eslint/eslint-plugin": "^4.23.0",
@@ -29,5 +30,10 @@
     "eslint": "^7.26.0",
     "prettier": "^2.3.0",
     "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "axios": "^0.21.1",
+    "fluent-ffmpeg": "^2.1.2",
+    "fs-extra": "^10.0.0"
   }
 }
