--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.1",
   "description": "Spotify downloader for node",
   "main": "dist/index.js",
+  "files": [
+    "dist/**/*"
+  ],
+  "types": "dist",
   "scripts": {
     "test": "node tests"
   },
