--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/fluent-ffmpeg": "^2.1.17",
     "@types/fs-extra": "^9.0.11",
     "@types/node": "^15.3.0",
+    "@types/spotify-web-api-node": "^5.0.2",
     "@typescript-eslint/eslint-plugin": "^4.23.0",
     "@typescript-eslint/parser": "^4.23.0",
     "eslint": "^7.26.0",
@@ -39,6 +40,7 @@
     "axios": "^0.21.1",
     "fluent-ffmpeg": "^2.1.2",
     "fs-extra": "^10.0.0",
+    "spotify-web-api-node": "^5.0.2",
     "ytdl-core": "^4.8.0"
   }
 }
