--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/fs-extra": "^9.0.11",
     "@types/node": "^15.3.0",
     "@types/spotify-web-api-node": "^5.0.2",
+    "@types/yt-search": "^2.3.0",
     "@typescript-eslint/eslint-plugin": "^4.23.0",
     "@typescript-eslint/parser": "^4.23.0",
     "eslint": "^7.26.0",
@@ -44,6 +45,7 @@
     "fluent-ffmpeg": "^2.1.2",
     "fs-extra": "^10.0.0",
     "spotify-web-api-node": "^5.0.2",
+    "yt-search": "^2.8.0",
     "ytdl-core": "^4.8.0"
   }
 }
