--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "build": "tsc -p .",
     "test": "node tests",
+    "docs": "typedoc",
     "prepare": "npm run build",
     "prettier-format": "prettier --config .prettierrc \"src/**/*.ts\" --write"
   },
@@ -38,6 +39,7 @@
     "@typescript-eslint/parser": "^4.23.0",
     "eslint": "^7.26.0",
     "prettier": "^2.3.0",
+    "typedoc": "^0.20.36",
     "typescript": "^4.2.4"
   },
   "dependencies": {
