--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "fs-extra": "^11.1.1",
     "spotify-web-api-node": "^5.0.2",
     "yt-search": "^2.10.4",
-    "ytdl-core": "^4.11.3"
+    "ytdl-core": "^4.11.3",
+    "@distube/ytdl-core": "^4.13.0"
   }
 }
